# memento-demo

./: .env.example  .gitignore  CLAUDE.md  CODEOWNERS  DECISIONS.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.claude/: settings.json
backend/: main.py
backend/accounts/: routes.py  schemas.py  service.py
backend/api/: backend_setup.py  deps.py  lifespan.py  observability.py
backend/balances/: routes.py  service.py
backend/config/: config.py  database_config.py
backend/fx/: __init__.py  routes.py  schemas.py  service.py
backend/holds/: routes.py  service.py
backend/money/: types.py
backend/outbox/: __init__.py  routes.py  schemas.py
backend/postings/: engine.py
backend/reconciliation/: importer.py  matcher.py
backend/reversals/: routes.py  service.py
backend/routers/: accounts_routes.py  admin_routes.py  balances_routes.py  fx_routes.py  holds_routes.py  idempotency_routes.py  outbox_routes.py  reconciliation_routes.py  reversals_routes.py  statements_routes.py  transfers_routes.py
backend/schemas/: admin_schemas.py  holds_schemas.py  idempotency_schemas.py  reversals_schemas.py  transfers_schemas.py
backend/services/: accounts_service.py  admin_service.py  balances_service.py  fx_rates.py  fx_service.py  holds_service.py  idempotency_store.py  idempotency_sweeper.py  outbox_service.py  postings_engine.py  reversals_service.py  transfers_locking.py  transfers_service.py
docs/: ROADMAP.md  TEAM.md  architecture.md
migrations/: env.py  register_models.py
prs/: PR-176-balance-snapshot.md  PR-188-advisory-lock.md  README.md  index.jsonl
scripts/: seed_history.sh
tests/: conftest.py  test_admin_journal.py  test_holds.py  test_idempotency_inspection.py  test_matcher.py  test_money.py  test_outbox.py  test_postings_engine.py  test_transfers_idempotency.py
(+23 files in other folders)
