[project]
name = "ledger"
version = "0.9.0"
description = "Ledger — a double-entry billing and payments core. Accounts, an append-only posting engine, idempotent transfers, balances, reconciliation, and statements."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlmodel>=0.0.22",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "python-json-logger>=3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-postgresql>=6.1",
    "httpx>=0.28",
    "mypy>=1.13",
    "ruff>=0.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend"]

# Backend is installed editable and imported as if `backend/` is the package
# root (e.g. `from config.config import settings`). See DECISIONS.md
# "Backend imports assume backend/ is on sys.path".
[tool.pytest.ini_options]
pythonpath = ["backend"]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
# Strict everywhere except test code. Money uses a NewType (money/types.py)
# to keep minor units from being mixed with plain ints — mypy is what enforces
# it, so it is not optional. See DECISIONS.md "mypy strict; Minor NewType".
strict = true
exclude = ["tests/"]
plugins = []

[[tool.mypy.overrides]]
module = ["pytest_postgresql.*", "asyncpg.*"]
ignore_missing_imports = true

[tool.ruff]
# Ruff is scoped to backend source; migrations and tests are excluded.
src = ["backend"]
extend-exclude = ["migrations", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "D", "UP", "B"]
ignore = ["D203", "D213"]

[tool.ruff.lint.pydocstyle]
convention = "pep257"
